Completed Jenkinsfile for books microservice

--- a/books/jenkins/Jenkinsfile
+++ b/books/jenkins/Jenkinsfile
@@ -14,7 +14,7 @@ pipeline {
         DEV_PROJECT = "raymondnehemiah-books-dev"
         STAGE_PROJECT = "raymondnehemiah-books-stage"
         APP_GIT_URL = "https://github.com/raymndnehemiah/DO288-apps"
-        NEXUS_SERVER = "http://nexus-common.apps.cluster.domain.example.com/repository/nodejs"
+        NEXUS_SERVER = "http://nexus-common.apps.ap45.prod.nextcle.com"
 
         // DO NOT CHANGE THE GLOBAL VARS BELOW THIS LINE
         APP_NAME = "books"
